--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div class="container">
-        <h2 class="text-center mb-4">Text Extractor Tool</h2>
+        <h2 class="text-center mb-4">Email Extractor Tool</h2>
         <div class="mb-3">
             <textarea id="inputText" class="form-control" rows="6" placeholder="Paste your text here..." maxlength="10000" oninput="updateCharCount()"></textarea>
             <span id="charCount" class="char-count">0 / 10000 characters</span>
